-- 1. 회원 정보
CREATE TABLE TBL_MEMBER
(
    ID                       NUMBER(19, 0) GENERATED BY DEFAULT AS IDENTITY,
    MEMBER_EMAIL             VARCHAR2(255)                      NOT NULL,
    MEMBER_PASSWORD          VARCHAR2(100), -- 일반 로그인은 필수지만, 카카오 전용은 NULL 가능
    MEMBER_NICKNAME          VARCHAR2(50)                       NOT NULL,

    -- [New] 카카오 연동을 위한 핵심 컬럼
    MEMBER_KAKAO_ID          NUMBER(19, 0),
    MEMBER_KAKAO_PROFILE_URL VARCHAR2(500),

    MEMBER_PROFILE_ID        VARCHAR2(255),
    MEMBER_INTRODUCTION      VARCHAR2(1000),
    HAS_PAYMENT_METHOD       CHAR(1)       DEFAULT 'N'          NOT NULL CHECK (HAS_PAYMENT_METHOD IN ('Y', 'N')),
    MEMBER_PAYMENT_TOTAL     NUMBER(19, 0) DEFAULT 0            NOT NULL,
    MEMBER_CREATE_TIME       TIMESTAMP     DEFAULT SYSTIMESTAMP NOT NULL,
    MEMBER_UPDATE_TIME       TIMESTAMP     DEFAULT SYSTIMESTAMP NOT NULL,
    MEMBER_STATUS            VARCHAR2(20)  DEFAULT 'ACTIVE'     NOT NULL,

    CONSTRAINT PK_MEMBER PRIMARY KEY (ID),
    CONSTRAINT UK_MEMBER_EMAIL UNIQUE (MEMBER_EMAIL),
    CONSTRAINT UK_MEMBER_KAKAO_ID UNIQUE (MEMBER_KAKAO_ID),
    CONSTRAINT CK_MEMBER_STATUS CHECK (MEMBER_STATUS IN ('ACTIVE', 'DISABLED', 'WITHDRAWN'))
);
COMMENT ON COLUMN TBL_MEMBER.HAS_PAYMENT_METHOD IS '결제 수단 등록 여부 (Y/N)';
COMMENT ON COLUMN TBL_MEMBER.MEMBER_KAKAO_ID IS '카카오 고유 식별 ID';


-- 2. 아티스트 정보
CREATE TABLE TBL_ARTIST
(
    MEMBER_ID                 NUMBER(19, 0)                      NOT NULL,
    ARTIST_BLOG_NAME          VARCHAR2(100)                      NOT NULL,
    ARTIST_DESCRIPTION        VARCHAR2(1000),
    ARTIST_BLOG_IMAGE_ID      VARCHAR2(255),
    ARTIST_FOLLOWER_COUNT     NUMBER(19, 0) DEFAULT 0            NOT NULL,
    ARTIST_SUBSCRIPTION_COUNT NUMBER(19, 0) DEFAULT 0            NOT NULL,
    BANK_NAME                 VARCHAR2(50),
    ACCOUNT_NUMBER            VARCHAR2(50),
    ACCOUNT_HOLDER            VARCHAR2(50),
    HAS_MEMBERSHIP            CHAR(1)       DEFAULT 'N'          NOT NULL CHECK (HAS_MEMBERSHIP IN ('Y', 'N')),
    ARTIST_CREATE_TIME        TIMESTAMP     DEFAULT SYSTIMESTAMP NOT NULL,
    ARTIST_UPDATE_TIME        TIMESTAMP,

    CONSTRAINT PK_ARTIST PRIMARY KEY (MEMBER_ID),
    CONSTRAINT FK_ARTIST_MEMBER FOREIGN KEY (MEMBER_ID)
        REFERENCES TBL_MEMBER (ID) ON DELETE CASCADE
);


-- 3. 팔로우 (무료 구독)
CREATE TABLE TBL_FOLLOW
(
    ARTIST_ID   NUMBER(19, 0)                  NOT NULL,
    MEMBER_ID   NUMBER(19, 0)                  NOT NULL,
    FOLLOW_TIME TIMESTAMP DEFAULT SYSTIMESTAMP NOT NULL,

    CONSTRAINT PK_FOLLOW PRIMARY KEY (ARTIST_ID, MEMBER_ID),
    CONSTRAINT FK_FOLLOW_ARTIST FOREIGN KEY (ARTIST_ID)
        REFERENCES TBL_ARTIST (MEMBER_ID) ON DELETE CASCADE,
    CONSTRAINT FK_FOLLOW_MEMBER FOREIGN KEY (MEMBER_ID)
        REFERENCES TBL_MEMBER (ID) ON DELETE CASCADE,
    CONSTRAINT CK_FOLLOW_SELF CHECK (ARTIST_ID != MEMBER_ID)
);


-- 4. 피드
CREATE TABLE TBL_FEED
(
    ID                NUMBER(19, 0) GENERATED BY DEFAULT AS IDENTITY,
    ARTIST_ID         NUMBER(19, 0)                      NOT NULL,
    FEED_TITLE        VARCHAR2(255),
    FEED_CONTENT      CLOB                               NOT NULL,
    FEED_MIN_TIER     NUMBER(1, 0)  DEFAULT 0            NOT NULL,
    FEED_MEDIA_TYPE   VARCHAR2(20)  DEFAULT 'TEXT'       NOT NULL,
    FEED_CATEGORY     VARCHAR2(100)                      NOT NULL,
    FEED_VIEW_COUNT   NUMBER(19, 0) DEFAULT 0            NOT NULL,
    FEED_LIKE_COUNT   NUMBER(19, 0) DEFAULT 0            NOT NULL,
    FEED_REPLY_COUNT  NUMBER(19, 0) DEFAULT 0            NOT NULL,
    FEED_STATUS       VARCHAR2(20)  DEFAULT 'PUBLIC'     NOT NULL,
    FEED_IS_DELETED   CHAR(1)       DEFAULT 'N'          NOT NULL,
    FEED_DELETED_TIME TIMESTAMP,
    FEED_WRITE_TIME   TIMESTAMP     DEFAULT SYSTIMESTAMP NOT NULL,
    FEED_UPDATE_TIME  TIMESTAMP,

    CONSTRAINT PK_FEED PRIMARY KEY (ID),
    CONSTRAINT FK_FEED_ARTIST FOREIGN KEY (ARTIST_ID)
        REFERENCES TBL_ARTIST (MEMBER_ID) ON DELETE CASCADE
);


-- 5. 파일
CREATE TABLE TBL_FILE
(
    ID                 VARCHAR2(32)                       NOT NULL,
    FILE_ORIGINAL_NAME VARCHAR2(255)                      NOT NULL,
    FILE_NAME          VARCHAR2(255)                      NOT NULL,
    FILE_PATH          VARCHAR2(255)                      NOT NULL,
    FILE_SIZE          NUMBER(19, 0) DEFAULT 0            NOT NULL,
    FILE_EXTENSION     VARCHAR2(20),
    TARGET_ID          NUMBER(19, 0),
    TARGET_GB          VARCHAR2(50)                       NOT NULL,
    FILE_OWNER_ID      NUMBER(19, 0)                      NOT NULL,
    CREATE_TIME        TIMESTAMP     DEFAULT SYSTIMESTAMP NOT NULL,

    CONSTRAINT PK_FILE PRIMARY KEY (ID)
);


-- 6. 피드 좋아요
CREATE TABLE TBL_FEED_LIKE
(
    FEED_ID   NUMBER(19, 0) NOT NULL,
    MEMBER_ID NUMBER(19, 0) NOT NULL,

    CONSTRAINT PK_FEED_LIKE PRIMARY KEY (FEED_ID, MEMBER_ID),
    CONSTRAINT FK_FEED_LIKE_FEED FOREIGN KEY (FEED_ID)
        REFERENCES TBL_FEED (ID) ON DELETE CASCADE,
    CONSTRAINT FK_FEED_LIKE_MEMBER FOREIGN KEY (MEMBER_ID)
        REFERENCES TBL_MEMBER (ID) ON DELETE CASCADE
);


-- 7. 알림
CREATE TABLE TBL_NOTIFICATION
(
    ID           NUMBER(19, 0) GENERATED BY DEFAULT AS IDENTITY,
    RECEIVER_ID  NUMBER(19, 0)                  NOT NULL,
    SENDER_ID    NUMBER(19, 0),
    NOTI_TYPE    VARCHAR2(50)                   NOT NULL,
    NOTI_MESSAGE VARCHAR2(500),
    NOTI_URL     VARCHAR2(255)                  NOT NULL,
    IS_READ      CHAR(1)   DEFAULT 'N'          NOT NULL,
    CREATED_TIME TIMESTAMP DEFAULT SYSTIMESTAMP NOT NULL,

    CONSTRAINT PK_NOTIFICATION PRIMARY KEY (ID),
    CONSTRAINT FK_NOTI_RECEIVER FOREIGN KEY (RECEIVER_ID)
        REFERENCES TBL_MEMBER (ID) ON DELETE CASCADE,
    CONSTRAINT FK_NOTI_SENDER FOREIGN KEY (SENDER_ID)
        REFERENCES TBL_MEMBER (ID) ON DELETE CASCADE
);


-- 8. 댓글
CREATE TABLE TBL_FEED_COMMENT
(
    ID           NUMBER(19, 0) GENERATED BY DEFAULT AS IDENTITY,
    FEED_ID      NUMBER(19, 0)             NOT NULL,
    MEMBER_ID    NUMBER(19, 0)             NOT NULL,
    CONTENT      VARCHAR2(1000)            NOT NULL,
    REPLY_COUNT  NUMBER(10, 0) DEFAULT 0   NOT NULL,
    IS_DELETED   CHAR(1)       DEFAULT 'N' NOT NULL CHECK (IS_DELETED IN ('Y', 'N')),
    DELETED_TIME TIMESTAMP,
    CREATED_TIME TIMESTAMP     DEFAULT SYSTIMESTAMP,
    UPDATED_TIME TIMESTAMP     DEFAULT SYSTIMESTAMP,

    CONSTRAINT PK_FEED_COMMENT PRIMARY KEY (ID),
    CONSTRAINT FK_COMMENT_FEED FOREIGN KEY (FEED_ID) REFERENCES TBL_FEED (ID) ON DELETE CASCADE,
    CONSTRAINT FK_COMMENT_MEMBER FOREIGN KEY (MEMBER_ID) REFERENCES TBL_MEMBER (ID) ON DELETE CASCADE
);


-- 9. 대댓글
CREATE TABLE TBL_FEED_REPLY
(
    ID               NUMBER(19, 0) GENERATED BY DEFAULT AS IDENTITY,
    COMMENT_ID       NUMBER(19, 0)         NOT NULL,
    MEMBER_ID        NUMBER(19, 0)         NOT NULL,
    TARGET_MEMBER_ID NUMBER(19, 0),
    CONTENT          VARCHAR2(1000)        NOT NULL,
    IS_DELETED       CHAR(1)   DEFAULT 'N' NOT NULL CHECK (IS_DELETED IN ('Y', 'N')),
    DELETED_TIME     TIMESTAMP,
    CREATED_TIME     TIMESTAMP DEFAULT SYSTIMESTAMP,
    UPDATED_TIME     TIMESTAMP DEFAULT SYSTIMESTAMP,

    CONSTRAINT PK_FEED_REPLY PRIMARY KEY (ID),
    CONSTRAINT FK_REPLY_COMMENT FOREIGN KEY (COMMENT_ID) REFERENCES TBL_FEED_COMMENT (ID) ON DELETE CASCADE,
    CONSTRAINT FK_REPLY_MEMBER FOREIGN KEY (MEMBER_ID) REFERENCES TBL_MEMBER (ID) ON DELETE CASCADE,
    CONSTRAINT FK_REPLY_TARGET FOREIGN KEY (TARGET_MEMBER_ID) REFERENCES TBL_MEMBER (ID) ON DELETE SET NULL
);


-- 10. 멤버십 정의
CREATE TABLE TBL_MEMBERSHIP
(
    ID               NUMBER(19, 0) GENERATED BY DEFAULT AS IDENTITY,
    ARTIST_ID        NUMBER(19, 0)             NOT NULL,
    NAME             VARCHAR2(100)             NOT NULL,
    DESCRIPTION      VARCHAR2(500),
    IMAGE_ID         VARCHAR2(500),
    PRICE            NUMBER(19, 0)             NOT NULL,
    LEVEL_ORDER      NUMBER(1, 0)              NOT NULL,
    SUBSCRIBER_COUNT NUMBER(19, 0) DEFAULT 0   NOT NULL,
    IS_ACTIVE        CHAR(1)       DEFAULT 'Y' NOT NULL CHECK (IS_ACTIVE IN ('Y', 'N')),
    CREATED_TIME     TIMESTAMP     DEFAULT SYSTIMESTAMP,
    UPDATED_TIME     TIMESTAMP     DEFAULT SYSTIMESTAMP,

    CONSTRAINT PK_MEMBERSHIP PRIMARY KEY (ID),
    CONSTRAINT FK_MEMBERSHIP_ARTIST FOREIGN KEY (ARTIST_ID) REFERENCES TBL_ARTIST (MEMBER_ID) ON DELETE CASCADE,
    CONSTRAINT UQ_MEMBERSHIP_LEVEL UNIQUE (ARTIST_ID, LEVEL_ORDER),
    CONSTRAINT UQ_MEMBERSHIP_INTEGRITY UNIQUE (ID, ARTIST_ID)
);


-- 11. 결제 수단 정보
CREATE TABLE TBL_PAYMENT_METHOD
(
    ID           NUMBER(19, 0) GENERATED BY DEFAULT AS IDENTITY,
    MEMBER_ID    NUMBER(19, 0)                  NOT NULL,
    BILLING_KEY  VARCHAR2(255)                  NOT NULL,
    LAST_4_DIGIT VARCHAR2(4)                    NOT NULL,
    CARD_NAME    VARCHAR2(100),
    IS_DEFAULT   CHAR(1)   DEFAULT 'N'          NOT NULL CHECK (IS_DEFAULT IN ('Y', 'N')),
    CREATED_TIME TIMESTAMP DEFAULT SYSTIMESTAMP NOT NULL,

    CONSTRAINT PK_PAYMENT_METHOD PRIMARY KEY (ID),
    CONSTRAINT FK_PM_MEMBER FOREIGN KEY (MEMBER_ID) REFERENCES TBL_MEMBER (ID) ON DELETE CASCADE,
    CONSTRAINT UK_BILLING_KEY UNIQUE (BILLING_KEY),
    CONSTRAINT UQ_PM_INTEGRITY UNIQUE (ID, MEMBER_ID)
);
COMMENT ON TABLE TBL_PAYMENT_METHOD IS '정기 결제 수단 정보';


-- 12. 멤버십 구독 정보
CREATE TABLE TBL_SUBSCRIPTION
(
    ID                 NUMBER(19, 0) GENERATED BY DEFAULT AS IDENTITY,
    MEMBER_ID          NUMBER(19, 0)                     NOT NULL,
    ARTIST_ID          NUMBER(19, 0)                     NOT NULL,
    MEMBERSHIP_ID      NUMBER(19, 0)                     NOT NULL,
    PAYMENT_METHOD_ID  NUMBER(19, 0),
    NEXT_MEMBERSHIP_ID NUMBER(19, 0),
    LAST_MERCHANT_UID  VARCHAR2(255),
    STATUS             VARCHAR2(20) DEFAULT 'ACTIVE'     NOT NULL,
    START_DATE         TIMESTAMP    DEFAULT SYSTIMESTAMP NOT NULL,
    IS_AUTO_RENEWAL    CHAR(1)      DEFAULT 'Y'          NOT NULL CHECK (IS_AUTO_RENEWAL IN ('Y', 'N')),
    NEXT_BILLING_DATE  TIMESTAMP                         NOT NULL,
    UPDATED_TIME       TIMESTAMP    DEFAULT SYSTIMESTAMP NOT NULL,

    CONSTRAINT PK_SUBSCRIPTION PRIMARY KEY (ID),
    CONSTRAINT FK_SUB_MEMBER FOREIGN KEY (MEMBER_ID) REFERENCES TBL_MEMBER (ID) ON DELETE CASCADE,
    CONSTRAINT FK_SUB_ARTIST FOREIGN KEY (ARTIST_ID) REFERENCES TBL_ARTIST (MEMBER_ID) ON DELETE CASCADE,
    CONSTRAINT FK_SUB_MEMBERSHIP_INTEGRITY FOREIGN KEY (MEMBERSHIP_ID, ARTIST_ID)
        REFERENCES TBL_MEMBERSHIP (ID, ARTIST_ID) ON DELETE CASCADE,
    CONSTRAINT FK_SUB_PM_INTEGRITY FOREIGN KEY (PAYMENT_METHOD_ID, MEMBER_ID)
        REFERENCES TBL_PAYMENT_METHOD (ID, MEMBER_ID) ON DELETE SET NULL,
    CONSTRAINT FK_SUB_NEXT_MEMBERSHIP FOREIGN KEY (NEXT_MEMBERSHIP_ID)
        REFERENCES TBL_MEMBERSHIP (ID) ON DELETE SET NULL
);
COMMENT ON TABLE TBL_SUBSCRIPTION IS '구독 권한 및 상태 정보';
COMMENT ON COLUMN TBL_SUBSCRIPTION.IS_AUTO_RENEWAL IS '자동 갱신 여부';


-- 13. 정산 정보
CREATE TABLE TBL_SETTLEMENT
(
    ID            NUMBER(19, 0) GENERATED BY DEFAULT AS IDENTITY,
    ARTIST_ID     NUMBER(19, 0)                     NOT NULL,
    TOTAL_AMOUNT  NUMBER(19, 0)                     NOT NULL, -- 총 매출액
    FEE_AMOUNT    NUMBER(19, 0)                     NOT NULL, -- 수수료 (5%)
    NET_AMOUNT    NUMBER(19, 0)                     NOT NULL, -- 실수령액 (95%)
    STATUS        VARCHAR2(20) DEFAULT 'REQUESTED'  NOT NULL CHECK (STATUS IN ('REQUESTED', 'COMPLETED', 'REJECTED')),
    REQUEST_TIME  TIMESTAMP    DEFAULT SYSTIMESTAMP NOT NULL,
    COMPLETE_TIME TIMESTAMP,

    CONSTRAINT PK_SETTLEMENT PRIMARY KEY (ID),
    CONSTRAINT FK_SETTLEMENT_ARTIST FOREIGN KEY (ARTIST_ID)
        REFERENCES TBL_ARTIST (MEMBER_ID) ON DELETE CASCADE
);
COMMENT ON TABLE TBL_SETTLEMENT IS '정산 신청 및 지급 내역';


-- 14. 크라우드 펀딩
CREATE TABLE TBL_CROWDFUNDING
(
    ID             NUMBER(19, 0) GENERATED BY DEFAULT AS IDENTITY,
    ARTIST_ID      NUMBER(19, 0)                      NOT NULL,
    WRITER_ID      NUMBER(19, 0)                      NOT NULL,
    TITLE          VARCHAR2(255)                      NOT NULL,
    CONTENT        CLOB                               NOT NULL,
    TARGET_AMOUNT  NUMBER(19, 0)                      NOT NULL,
    CURRENT_AMOUNT NUMBER(19, 0) DEFAULT 0            NOT NULL,
    START_DATE     TIMESTAMP                          NOT NULL,
    END_DATE       TIMESTAMP                          NOT NULL,
    STATUS         VARCHAR2(20)  DEFAULT 'WAITING'    NOT NULL,
    REJECT_REASON  VARCHAR2(1000),
    MAIN_IMG_ID    VARCHAR2(255),
    RESULT_FEED_ID NUMBER(19, 0),
    DECISION_TIME  TIMESTAMP,
    COMPLETED_TIME TIMESTAMP,
    CREATED_TIME   TIMESTAMP     DEFAULT SYSTIMESTAMP NOT NULL,
    UPDATED_TIME   TIMESTAMP     DEFAULT SYSTIMESTAMP NOT NULL,

    CONSTRAINT PK_CROWDFUNDING PRIMARY KEY (ID),
    CONSTRAINT FK_CF_ARTIST FOREIGN KEY (ARTIST_ID) REFERENCES TBL_ARTIST (MEMBER_ID) ON DELETE CASCADE,
    CONSTRAINT FK_CF_WRITER FOREIGN KEY (WRITER_ID) REFERENCES TBL_MEMBER (ID) ON DELETE CASCADE,
    CONSTRAINT FK_CF_RESULT_FEED FOREIGN KEY (RESULT_FEED_ID) REFERENCES TBL_FEED (ID) ON DELETE SET NULL,
    CONSTRAINT CK_CF_STATUS CHECK (STATUS IN ('WAITING', 'PROCEEDING', 'ENDED', 'SUCCESS', 'FAILED', 'REJECTED', 'CANCELLED', 'COMPLETED'))
);
COMMENT ON TABLE TBL_CROWDFUNDING IS '크라우드 펀딩 프로젝트 정보';


-- 15. 결제 이력 정보
CREATE TABLE TBL_PAYMENT_HISTORY
(
    ID              NUMBER(19, 0) GENERATED BY DEFAULT AS IDENTITY,
    MEMBER_ID       NUMBER(19, 0)                  NOT NULL,
    SUBSCRIPTION_ID NUMBER(19, 0),
    IMP_UID         VARCHAR2(255),
    MERCHANT_UID    VARCHAR2(255)                  NOT NULL,
    AMOUNT          NUMBER(19, 0)                  NOT NULL,
    PAYMENT_TYPE    VARCHAR2(20)                   NOT NULL,
    SETTLEMENT_ID   NUMBER(19, 0),
    FUNDING_ID      NUMBER(19, 0),
    STATUS          VARCHAR2(20)                   NOT NULL,
    CREATED_TIME    TIMESTAMP DEFAULT SYSTIMESTAMP NOT NULL,

    CONSTRAINT PK_PAYMENT_HISTORY PRIMARY KEY (ID),
    CONSTRAINT FK_PH_MEMBER FOREIGN KEY (MEMBER_ID) REFERENCES TBL_MEMBER (ID) ON DELETE CASCADE,
    CONSTRAINT FK_PH_SUB FOREIGN KEY (SUBSCRIPTION_ID) REFERENCES TBL_SUBSCRIPTION (ID) ON DELETE SET NULL,
    CONSTRAINT FK_PH_SETTLEMENT FOREIGN KEY (SETTLEMENT_ID) REFERENCES TBL_SETTLEMENT (ID) ON DELETE SET NULL,
    CONSTRAINT FK_PH_FUNDING FOREIGN KEY (FUNDING_ID) REFERENCES TBL_CROWDFUNDING (ID) ON DELETE SET NULL
);
COMMENT ON TABLE TBL_PAYMENT_HISTORY IS '결제 이력 정보';


-- 16. 펀딩 결제 내역
CREATE TABLE TBL_FUNDING_PAYMENT
(
    ID           NUMBER(19, 0) GENERATED BY DEFAULT AS IDENTITY,
    FUNDING_ID   NUMBER(19, 0)                     NOT NULL,
    MEMBER_ID    NUMBER(19, 0)                     NOT NULL,
    MERCHANT_UID VARCHAR2(255)                     NOT NULL,
    IMP_UID      VARCHAR2(255),
    AMOUNT       NUMBER(19, 0)                     NOT NULL,
    STATUS       VARCHAR2(20) DEFAULT 'PAID'       NOT NULL,
    PAYMENT_DATE TIMESTAMP    DEFAULT SYSTIMESTAMP NOT NULL,

    CONSTRAINT PK_FUNDING_PAYMENT PRIMARY KEY (ID),
    CONSTRAINT FK_FP_FUNDING FOREIGN KEY (FUNDING_ID) REFERENCES TBL_CROWDFUNDING (ID) ON DELETE CASCADE,
    CONSTRAINT FK_FP_MEMBER FOREIGN KEY (MEMBER_ID) REFERENCES TBL_MEMBER (ID) ON DELETE CASCADE,
    CONSTRAINT UK_FP_MERCHANT UNIQUE (MERCHANT_UID),
    CONSTRAINT CK_FP_STATUS CHECK (STATUS IN ('PAID', 'REFUNDED', 'CANCELLED', 'MOVED'))
);
COMMENT ON TABLE TBL_FUNDING_PAYMENT IS '크라우드 펀딩 결제(후원) 내역';